--- a/package.json
+++ b/package.json
@@ -8,17 +8,25 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.12.2",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@react-pdf/renderer": "^3.1.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@trendmicro/react-sidenav": "^0.5.0",
     "@types/jest": "^27.5.2",
+    "@types/jspdf": "^2.0.0",
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "jquery": "^3.7.0",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-pdf": "^7.1.3",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.10",
