--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.4.0",
-    "bootstrap": "^5.3.0",
+    "bootstrap": "^5.3.1",
+    "chart.js": "^4.3.3",
     "jquery": "^3.7.0",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
